# cquest

./: README.md  pyproject.toml
claude_quest/: __init__.py  claude.py  cli.py  state.py
cquest/: __init__.py  claude.py  cli.py  session-viewer.html  state.py
docs/: AI_TASKED_RESEARCH.md  philosophy.md  state-evolution.md  why-quests-on-claude-code.md
docs/usage_hints/: resume.md  state-evolution.md
