[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cquest"
version = "0.16.0"
description = "Longitudinal project context manager for Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
cquest = "cquest.cli:cli"

[tool.setuptools.packages.find]
include = ["cquest*"]
