[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cquest"
version = "0.17.0"
description = "Context management for building long-horizon projects on Claude Code"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
cquest = "cquest.cli:cli"

[tool.setuptools.packages.find]
include = ["cquest*"]
